# test_clang-tidy

./: .gitignore  CMakeLists.txt  README.md  build.bat
sources/: main.cpp
